overlays/uksouth-prod/binklink/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Xss-Protection: 1; mode=block";
  name: link.prod0.uksouth.bink.sh
  namespace: default
spec:
  rules:
  - host: link.prod0.uksouth.bink.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: binklink
            port:
              number: 80
  tls:
  - hosts:
    - link.prod0.uksouth.bink.sh
    secretName: link.prod0.uksouth.bink.sh
